# leptyper

./: README.md  pyproject.toml
src/leptyper/: __init__.py  alignment.py  cli.py  log.py  mash.py  mlst.py  output.py  serotyping.py  utils.py
src/leptyper/database/mlst_scheme_1/: download.sh
src/leptyper/database/mlst_scheme_2/: download.sh
src/leptyper/database/mlst_scheme_3/: download.sh
